--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
                 There is no BITPANDA User Account connected to this NXT Account! You need to register an Account at BITPANDA and connect it with your NXT Account to use our service.
             </p>
             <div class="row">
-                <div class="col-sm-6"><a href="https://www.bitpanda.com/users/register" class="btn btn-primary btn-block" target="_blank">1. Please create your BITPANDA Account now!</a></div>
+                <div class="col-sm-6"><a href="https://www.bitpanda.com/users/register/?ref=4898908347981251958" class="btn btn-primary btn-block" target="_blank">1. Please create your BITPANDA Account now!</a></div>
                 <div class="col-sm-6"><a href="https://www.bitpanda.com/users/settings" class="btn btn-default btn-block" target="_blank">2. Login to your BITPANDA Account and connect it with your NXT Account under "Settings"!</a></div>
             </div>
             <hr />
